--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
@@ -21,8 +22,9 @@
     "css-loader": "0.28.4",
     "enzyme": "2.9.1",
     "enzyme-adapter-react-15": "1.0.0",
+    "extract-text-webpack-plugin": "3.0.0",
     "jest": "20.0.4",
-    "live-server": "^1.2.0",
+    "live-server": "1.2.0",
     "moment": "2.18.1",
     "node-sass": "^7.0.1",
     "normalize.css": "7.0.0",
